# ChangeLog for sci-libs/io_lib
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sci-libs/cvs-repo/gentoo-x86/sci-libs/io_lib/ChangeLog,v 1.17 2009/03/24 21:03:25 ribosome Exp $

  24 Mar 2009; Olivier Fisette <ribosome@gentoo.org> metadata.xml:
  Giving up maintainership of this package.

  06 Jul 2008; Olivier Fisette <ribosome@gentoo.org>
  io_lib-1.8.12b-r1.ebuild:
  Added to amd64 for eventual Bioperl stabilisation (bug #222727).

*io_lib-1.11.2.1 (06 Jul 2008)

  06 Jul 2008; Olivier Fisette <ribosome@gentoo.org>
  +io_lib-1.11.2.1.ebuild:
  New version. Better documentation installation.

  06 Jul 2008; Olivier Fisette <ribosome@gentoo.org>
  +io_lib-1.8.12b-r1.ebuild:
  Readded version 1.8.12b for Bioperl.

  06 Jul 2008; Olivier Fisette <ribosome@gentoo.org>
  -io_lib-1.8.12b-r1.ebuild, -io_lib-1.9.0-r1.ebuild:
  Pruned old versions.

  06 Jul 2008; Olivier Fisette <ribosome@gentoo.org> io_lib-1.10.1.ebuild:
  Stable on x86.

  02 Jan 2008; Raúl Porcel <armin76@gentoo.org> io_lib-1.8.12b-r1.ebuild,
  io_lib-1.10.1.ebuild:
  Add ~alpha/~ia64

  11 Aug 2007; Ferris McCormick <fmccor@gentoo.org> io_lib-1.10.1.ebuild:
  Add back ~sparc keyword:  Builds as expected and utilities seem to work.

*io_lib-1.10.1 (22 Oct 2006)

  22 Oct 2006; Olivier Fisette <ribosome@gentoo.org> +io_lib-1.10.1.ebuild:
  New upstream version.

  30 Sep 2006; Jason Wever <weeve@gentoo.org> io_lib-1.8.12b-r1.ebuild:
  Added ~sparc keyword wrt bug #149577.

  30 Sep 2006; Olivier Fisette <ribosome@gentoo.org> -io_lib-1.8.12b.ebuild,
  io_lib-1.8.12b-r1.ebuild:
  Added to x86 to fix BioPerl dependencies and not leave stable users without
  a keyworded ebuild. Pruning old ebuild with missing dependencies.

*io_lib-1.9.0-r1 (30 Sep 2006)
*io_lib-1.8.12b-r1 (30 Sep 2006)

  30 Sep 2006; Olivier Fisette <ribosome@gentoo.org>
  +io_lib-1.8.12b-r1.ebuild, -io_lib-1.9.0.ebuild, +io_lib-1.9.0-r1.ebuild: