@@ -1,8 +1,10 @@
 DIST io_lib-1.10.1.tar.gz 254965 RMD160 c370b854ea12e85198437157ef6039a5db7f9b6d SHA1 360d8b8c137dd37918c6eb825e572a8b80495354 SHA256 380c9d584b2c851adcf02c8e40b8ecc86b292245dcb6baf76071766e33ce8c17
 DIST io_lib-1.11.2.1.tar.gz 385229 RMD160 fe6f2a0e8ad0c638cf5dc6dd6ff6327091511de3 SHA1 d2f541d4b4dfabac0dd8c340470309288608c2ee SHA256 5a7b90aec5971286200ebe42bf4105b58476f464d577d5c21245d64870a4596d
+DIST io_lib-1.12.1.tar.gz 772314 RMD160 bd040c543a32ff08f630cdfeb86b5f77d5566415 SHA1 3e7cbb383f430aa9c6a0711f7179932061e53f26 SHA256 732fc729662f380861e12fd9006a1a1c072f459589b6d2c49a7c01c88a9cdf01
 DIST io_lib-1.8.12b.tar.bz2 259252 RMD160 45327d7094a24c3f1c1144f662239928b4ff0d22 SHA1 16d24646fcf96e0766f2a0878338fead17d607ce SHA256 230e4b58d30201057b7f0baf386d77addee6352e3481be2ecbe5415146ce05bc
 EBUILD io_lib-1.10.1.ebuild 807 RMD160 77879631c18cf123f51c7d5e71e403cb717c4c8b SHA1 a9180d764be0b5aa907fd36b5d570e3f810d1369 SHA256 e289771412089d5b241470e3b914d425a8f7937a5ea01335ef2e99bdcd5646e3
 EBUILD io_lib-1.11.2.1.ebuild 889 RMD160 d21c36b2b2c1ae4ff9a32631797a5ae9081e4e3d SHA1 b95ba4f937647807d32328d4921fb0824967191b SHA256 c214b762fa4663b2dea156f4bcd469ec3a81b9b6b3cc05917e5b9b4db0d5d5b8
+EBUILD io_lib-1.12.1.ebuild 794 RMD160 e447fc8b473b8708d4e753211d87720dfb17d3d1 SHA1 1493089bd87c240d89aea54dee071350efea803c SHA256 4cdc699357d8859ae6a01e957311b6c7897264c67e76d76aa0ec8c3d78461b70
 EBUILD io_lib-1.8.12b-r1.ebuild 732 RMD160 babef705801e6addd3cd152614597dbf32240f7b SHA1 cf4dd8ab0de9b833b375ac7b01bfc27dd77e09d0 SHA256 841c5dde0eff16f62f49db3168d301709e0b009e13795d928d5e8578f367d210
-MISC ChangeLog 3068 RMD160 0d2fe3d4d612e4a781c05ba9a297526484ac502d SHA1 627ad3e168c761cc9cb348c3217a11962e4f92b5 SHA256 5e4ebaff2ccf43a4a5ba549269cf239c0bbfc930d5090a665d3c315a4fe7831e
+MISC ChangeLog 3266 RMD160 c48265e6000b4d96bb30475e2241c69dad915599 SHA1 405201c361d66ad7a884babf7e969f5bccd6484c SHA256 0e40a6c019ca34a3997f92d345a246f15cbb1ad91bd8c693b237c3f33de22bc1
 MISC metadata.xml 157 RMD160 ed43b99e7bf8bbf62cf4e46152138ab42d3a88c5 SHA1 2182a6de0b10959aad51af2990f1a6c69e34dd97 SHA256 750cb9e46ac2b77e1adf73de43c186a8c2d2234a9c6a89d9358d0969dc5cf8ac
