@@ -1,6 +1,12 @@
 # ChangeLog for sci-libs/io_lib
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sci-libs/cvs-repo/gentoo-x86/sci-libs/io_lib/ChangeLog,v 1.17 2009/03/24 21:03:25 ribosome Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sci-libs/cvs-repo/gentoo-x86/sci-libs/io_lib/ChangeLog,v 1.18 2009/11/24 23:58:53 weaver Exp $
+
+*io_lib-1.12.1 (24 Nov 2009)
+
+  24 Nov 2009; Andrey Kislyuk <weaver@gentoo.org> +io_lib-1.12.1.ebuild:
+  Version bump. Drop bioperl block - cannot find a reason for it. Drop
+  unmaintained keywords.
 
   24 Mar 2009; Olivier Fisette <ribosome@gentoo.org> metadata.xml:
   Giving up maintainership of this package.
